Did some things, washed some stones, cleaned some popcorn kernels